--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <div class="container">
         <h1>Application météo</h1>
+
+    <div class="bloc-logo-info">
+
         <div class="bloc-logo">
             <img src="./ressources/jour/04d.svg" alt="logo du temps qu'il fait"
             class="logo-meteo">
@@ -20,6 +23,7 @@
             <p class="temperature">15°</p>
             <p class="localitation">Martigues</p>
         </div>
+    </div>
 
         <div class="heure-bloc-previsions">
             <div class="bloc-h">
